# Orbital-Physics-Simulator

./: CMakeLists.txt  README.md
assets/shaders/: star_skybox.fs  star_skybox.vs
include/: raygui.h
src/: camera.c  camera.h  game.c  game.h  main.c  planet.c  planet.h  skybox.c  skybox.h  timer.c  timer.h  ui.c  ui.h  world.c  world.h
